# catgpt

./: .gitignore  Cargo.toml  Dockerfile  app.py  backup_db.sh  build_docker.sh  bun.lockb  docker-compose.yaml  models.ts  package.json  readme.md  restore_backup.sh  run.sh  run_server.sh  types.ts  update_server.sh
.github/disableworkflows/: build.yaml
.github/workflows/: build.yaml
docs/: promts.txt
python/: SpeechT5.py  catty.py  continous_whisper.py  helpers.py  samuel_jackson.py  text_to_speech.py  virtual_cat.py  whisper_mic_test.py  whisper_test.py
server/: .gitignore  README.md  bun.lockb  package.json  tsconfig.json
server/prisma/: schema.prisma
server/prisma/migrations/20231216054212_init/: migration.sql
server/prisma/migrations/20231217094507_init/: migration.sql
server/prisma/migrations/20240202064459_init/: migration.sql
server/src/: config.ts  create-bot.ts  create-user.ts  executor.ts  functions.ts  google.ts  index.ts  llm_client.ts  load_old_db.ts  types.ts  users.ts  utility.ts  ws.ts  ws_handler.ts
src/: args.rs  auth.rs  config.rs  database.rs  main.rs  openai.rs  random.rs  sse.rs  tokenizer.rs  types.rs  wisper.rs  ws_server.rs
web/: bun.lockb  index.css  index.html  login.html  package-lock.json  package.json  spack.config.js  tsconfig.json  vite.config.ts
web/public/: manifest.json
web/src/: app.ts  bot.tsx  bots_page.tsx  cache.ts  chat_list.css  chats_list.tsx  common.tsx  current_chat.tsx  editor.tsx  events.ts  hooks.ts  index.css  layout.tsx  login_page.ts  login_page.tsx  main.tsx  main_container.tsx  main_page.tsx  modal.tsx  model.tsx  navbar.tsx  personalities.tsx  projects.tsx  state.ts  types.ts  utility.ts  ws.ts
