[package]
name = "aki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.10"
log = { version = "0.4" }
env_logger = "0.10"
anyhow = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["stream"] }
clap = { version = "4", features = ["derive"] } 
chrono = "0.4.26"
uuid = { version = "1.4", features = ["v4"] }