[package]
name = "catgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.10"
log = { version = "0.4" }
env_logger = "0.10"
anyhow = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
reqwest = { version = "0.11", features = ["stream"] }
clap = { version = "4", features = ["derive"] } 
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
rand = "0.8"
jsonwebtoken = "8.3.0"
hound = "3"
dirs = "5.0.1"
tokenizers = "0.14"
mime_guess = "2"

[dependencies.whisper-rs]
version = "0.8.0"
optional = true

[features]
whisper = ["whisper-rs"]
